--- a/PLANS-API.yml
+++ b/PLANS-API.yml
@@ -7,7 +7,7 @@ spring:
       client:
         url: http://localhost:2222
   datasource:
-    url: http://localhost:3306/HIS
+    url: jdbc:mysql://localhost:3306/HIS
     username: root
     password: Vij@y0301
     
